Fix typos in original notebook ; added revision notebook to the repo

--- a/Stats_In_Python.ipynb
+++ b/Stats_In_Python.ipynb
@@ -8,7 +8,7 @@
     "# Statistics in python\n",
     "_______\n",
     "## Measures of center - `mean` , `median` , `mode`\n",
-    "- Mean - '*the typical value*' - sum of all observations divided by the total no. of observations - `np.median()`\n",
+    "- Mean - '*the typical value*' - sum of all observations divided by the total no. of observations - `np.mean()`\n",
     "- Median - '*the exact middle value*' - midpoint of the observed values **sorted in order** - `np.median()`\n",
     "- Mode - '*the most occurred observed value*' - its the count of how many times each of the observed values has occurred - `df.value_counts()`\n",
     "<br>\n",
